--- a/index.html
+++ b/index.html
@@ -21,10 +21,11 @@
                 <a class="nav-link active" aria-current="page" href="Home.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="Contact.html">Contact</a>
+                <a class="nav-link" href="contactus.html">contactus</a>
               </li>
+              
               <li class="nav-item">
-                <a class="nav-link" href="AboutUs">AboutUs</a>
+                <a class="nav-link" href="AboutUs.html">AboutUs</a>
               </li>
               
             </ul>
